# Resilience_Amazon_Forest

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: initial_analysis.py
src/amazon/: __init__.py
src/amazon/koopman/: __init__.py  windowed.py
src/amazon/preprocessing/: __init__.py  stl.py
src/amazon/resilience/: __init__.py  ar1.py
src/koopman_response/: __init__.py
src/koopman_response/algorithms/: __init__.py  dictionaries.py  edmd.py  kdmd.py  kernels.py  regularization.py  spectrum.py
src/koopman_response/systems/: __init__.py  chaotic_map.py  chaotic_map_2d.py  lorenz63.py  lorenz96.py
src/koopman_response/utils/: __init__.py  koopman.py  preprocessing.py  signal.py
tests/: test_stl_preprocessing.py
