[project]
name = "amazon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "h5netcdf>=1.8.1",
    "h5py>=3.16.0",
    "marimo>=0.23.9",
    "numpy>=2.4.6",
    "scikit-learn>=1.9.0",
    "statsmodels>=0.14.6",
    "tqdm>=4.68.1",
    "xarray>=2026.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
